--- a/tools/cfgs/kitti_models/zzx_second_with_lion_mamba_64dim.yaml
+++ b/tools/cfgs/kitti_models/zzx_second_with_lion_mamba_64dim.yaml
@@ -76,7 +76,7 @@ MODEL:
         GROUP_SIZE: [4096, 2048, 1024, 512] 
         DIRECTION: ['x', 'y']
         DIFF_SCALE: 0.2
-        DIFFUSION:  [False, True, True, True] #False #True #针对不同层手是否启用动扩散处理
+        DIFFUSION:  [False, False, True, True] #False #True #针对不同层手是否启用动扩散处理
         SHIFT: True
         OPERATOR:
             NAME: 'Mamba'
@@ -88,12 +88,12 @@ MODEL:
 
         DIFF_MODEL:
             ENABLE: True #扩散模型总控
-            LEVEL: [True, False, False, False] #是否各层是否启用扩散模型
+            LEVEL: [True, True, False, False] #是否各层是否启用扩散模型
             PRIORITY: [True, True, True, True] #是否先于手动扩散处理
             LATENT:
                 voxel_feature_dim: 64
                 voxel_latent_dim: 16
-                latent_down_scale: [4, 4, 4]
+                latent_down_scale: [[2, 2, 16], [2, 2, 8], [2, 2, 4], [2, 2, 2]]
             DIFF_PROCESS:
                 diff_noise_scale: 1.0
                 diff_residual_scale: 1.0
@@ -103,10 +103,10 @@ MODEL:
                     out_channels: 16
                     base_channels: 8
                     dropout: 0.1
-                    mlp_dims: [256, 128, 64]
+                    mlp_dims: [256, 128, 64]      #[256, 128, 64]
                     # 新增位置引导配置
                     use_pos_guide: True           # 使用位置坐标引导
-                    pos_guide_strength: 0.5       # 引导强度
+                    pos_guide_strength: 0.5       # 0.5 引导强度
                     pos_embed_dim: 8              # 位置编码维度
                 diffusion:
                     beta_schedule: linear
