--- a/tools/cfgs/kitti_models/second_with_lion_mamba_64dim.yaml
+++ b/tools/cfgs/kitti_models/second_with_lion_mamba_64dim.yaml
@@ -1,13 +1,13 @@
 CLASS_NAMES: ['Car', 'Pedestrian', 'Cyclist']
 
 DATA_CONFIG:
-    _BASE_CONFIG_: cfgs/dataset_configs/kitti_dataset.yaml
+    _BASE_CONFIG_: cfgs/dataset_configs/zzx_kitti_dataset.yaml
     POINT_CLOUD_RANGE: [0, -40, -3, 70.4, 40, 1]
     DATA_AUGMENTOR:
         DISABLE_AUG_LIST: ['placeholder']
         AUG_CONFIG_LIST:
             - NAME: gt_sampling
-              USE_ROAD_PLANE: False
+              USE_ROAD_PLANE: False # True
               DB_INFO_PATH:
                   - kitti_dbinfos_train.pkl
               PREPARE: {
