--- a/tools/cfgs/kitti_models/zzx_second_with_lion_mamba_64dim.yaml
+++ b/tools/cfgs/kitti_models/zzx_second_with_lion_mamba_64dim.yaml
@@ -56,9 +56,11 @@ DATA_CONFIG:
 
 
 MODEL:
+    # === 更改detector ===
     NAME: ZZXDF_SECONDNet
 
     VFE:
+        # === 更改VFE ===
         NAME: ZZXDF_VFE
         WITH_DISTANCE: False
         USE_ABSLOTE_XYZ: True
@@ -76,7 +78,7 @@ MODEL:
         GROUP_SIZE: [4096, 2048, 1024, 512] 
         DIRECTION: ['x', 'y']
         DIFF_SCALE: 0.2
-        DIFFUSION:  [False, False, True, True] #False #True #针对不同层手是否启用动扩散处理
+        DIFFUSION:  [False, True, True, True] #False #True #针对不同层手是否启用动扩散处理
         SHIFT: True
         OPERATOR:
             NAME: 'Mamba'
@@ -88,12 +90,13 @@ MODEL:
 
         DIFF_MODEL:
             ENABLE: True #扩散模型总控
-            LEVEL: [True, True, False, False] #是否各层是否启用扩散模型
+            LEVEL: [True, False, False, False] #是否各层是否启用扩散模型
             PRIORITY: [True, True, True, True] #是否先于手动扩散处理
             LATENT:
                 voxel_feature_dim: 64
                 voxel_latent_dim: 16
-                latent_down_scale: [[2, 2, 16], [2, 2, 8], [2, 2, 4], [2, 2, 2]]
+                # [[2, 2, 8], [2, 2, 4], [2, 2, 2], [2, 2, 1]]
+                latent_down_scale: [[2, 2, 8], [2, 2, 4], [2, 2, 2], [2, 2, 1]]
             DIFF_PROCESS:
                 diff_noise_scale: 1.0
                 diff_residual_scale: 1.0
@@ -110,7 +113,7 @@ MODEL:
                     pos_embed_dim: 8              # 位置编码维度
                 diffusion:
                     beta_schedule: linear
-                    linear_start: 0.0005
+                    linear_start: 0.004
                     linear_end: 0.02
                     num_diffusion_timesteps: 5
             DIFF_LOSS_CFG:
